--- a/less/index.less
+++ b/less/index.less
@@ -1,7 +1,18 @@
 // Import your less files here:
-html {
-    background: red;
-}
+
+// Vars and Mixins
+@import "variables.less";
+@import "mixins.less";
+
+// General Styles
+@import "reset.less";
+@import "global.less";
+
+// Components
+@import "navigation.less";
+@import "footer.less";
+@import "home-page.less";
+
 
 
 
