--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,6 +11,9 @@
     p {
       padding:0 15px;
     }
+    img {
+      border-radius: 5px;
+    }
   
   }
 
@@ -54,10 +57,15 @@
       }
 
       p {
-        margin-bottom: 26px;
+        margin-bottom: 24px;
       }
 
       .btn {
+        .custom-btn(100px, 37px, @ebony-clay, @porcelain, 1.8rem);
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     }
 
