--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,9 @@
 // Mixins Here
+.custom-btn(@width, @height, @bgcolor, @font-color, @font-size) {
+    width: @width;
+    height: @height;
+    background-color: @bgcolor;
+    color: @font-color;
+    font-size: @font-size;
+    border-radius: 5px;
+}
