--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,29 @@
 // Navigation code here
+.navigation {
+    background: @wild-sand;
+    margin-top: 0;
+    .header {
+        margin: 0 auto;
+        max-width: 800px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h1 {
+            margin-top: 1.6%;
+            font-size: 4rem;
+        }
+        nav {
+            width: 47%;
+            margin: 2.3% 0 1.5% 0;
+            font-size: 1.6rem;
+            a {
+                text-decoration: none;
+                color: @river-bend;
+                margin-right: 7.47%;
+            }
+            a:last-of-type {
+                margin-right: 0;
+            }
+        }
+    }
+}
