added hover state on btn

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,4 +6,9 @@
     color: @font-color;
     font-size: @font-size;
     border-radius: 5px;
+
+    &:hover {
+    background-color: @font-color;
+    color: @bgcolor;
+  }
 }
