--- a/css/index.css
+++ b/css/index.css
@@ -255,6 +255,10 @@ footer {
   justify-content: center;
   align-items: center;
 }
+.home .walk .walk-text .btn:hover {
+  background-color: #F6F7F8;
+  color: #23293B;
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
