--- a/css/index.css
+++ b/css/index.css
@@ -171,14 +171,31 @@ p {
   flex-direction: column;
   align-items: center;
 }
+@media (max-width: 500px) {
+  .navigation .header {
+    margin-left: 3%;
+  }
+}
 .navigation .header h1 {
   margin-top: 1.6%;
   font-size: 4rem;
+}
+@media (max-width: 500px) {
+  .navigation .header h1 {
+    margin-top: 2.6%;
+  }
 }
 .navigation .header nav {
   width: 47%;
   margin: 2.3% 0 1.5% 0;
   font-size: 1.6rem;
+}
+@media (max-width: 500px) {
+  .navigation .header nav {
+    width: 80.2%;
+    margin-top: 4%;
+    margin-bottom: 3.5%;
+  }
 }
 .navigation .header nav a {
   text-decoration: none;
@@ -204,7 +221,13 @@ footer {
 .home .intro p {
   padding: 0 15px;
 }
+@media (max-width: 500px) {
+  .home .intro p {
+    padding: 0 10px;
+  }
+}
 .home .intro img {
+  width: 100%;
   border-radius: 5px;
 }
 .home .space-images {
@@ -212,17 +235,35 @@ footer {
   flex-wrap: wrap;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images .sky,
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+    margin-right: 5%;
+    margin-left: 5%;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
 .home .visit-planets h3 {
   margin-top: 11px;
+}
+@media (max-width: 500px) {
+  .home .visit-planets h3 {
+    margin-top: 10px;
+  }
 }
 .home .visit-planets p {
   margin-top: 13px;
@@ -234,8 +275,22 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    margin-top: 4%;
+    flex-direction: column-reverse;
+    padding: 4%;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -259,9 +314,22 @@ footer {
   background-color: #F6F7F8;
   color: #23293B;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    height: 7rem;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin-left: 0;
+    margin-bottom: 7%;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
