--- a/less/home-page.less
+++ b/less/home-page.less
@@ -10,8 +10,12 @@
 
     p {
       padding:0 15px;
+      @media @phone {
+        padding: 0 10px;
+      }
     }
     img {
+      width: 100%;
       border-radius: 5px;
     }
   
@@ -21,12 +25,23 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    @media @phone {
+      .sky, .launch {
+        display: none;
+      }
+    }
 
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @phone {
+        width: 100%;
+        margin-right: 5%;
+        margin-left: 5%;
+      }
     }
   }
 
@@ -35,6 +50,9 @@
 
     h3 {
       margin-top: 11px;
+      @media @phone {
+        margin-top: 10px;
+      }
     }
 
     p {
@@ -48,9 +66,20 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+    @media @phone {
+       margin-top: 4%;
+       flex-direction: column-reverse;
+       padding: 4%;
+      }
 
     .walk-text {
       width: 50%;
+      @media @phone {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -66,12 +95,21 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        @media @phone {
+          width: 100%;
+          height: 7rem;
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width: 100%;
+        margin-left: 0;
+        margin-bottom: 7%;
+      }
       
       img {
         width: 100%;
