--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,14 +8,25 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        @media @phone {
+            margin-left: 3%;
+        }
         h1 {
             margin-top: 1.6%;
             font-size: 4rem;
+            @media @phone {
+                margin-top: 2.6%;
+            }
         }
         nav {
             width: 47%;
             margin: 2.3% 0 1.5% 0;
             font-size: 1.6rem;
+            @media @phone {
+                width: 80.2%;
+                margin-top: 4%;
+                margin-bottom: 3.5%;
+            }
             a {
                 text-decoration: none;
                 color: @river-bend;
