--- a/css/index.css
+++ b/css/index.css
@@ -221,11 +221,6 @@ footer {
 .home .intro p {
   padding: 0 15px;
 }
-@media (max-width: 500px) {
-  .home .intro p {
-    padding: 0 10px;
-  }
-}
 .home .intro img {
   width: 100%;
   border-radius: 5px;
@@ -307,8 +302,9 @@ footer {
   border-radius: 5px;
   cursor: pointer;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 .home .walk .walk-text .btn:hover {
   background-color: #F6F7F8;
