--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,24 +1,18 @@
 // Home Content
 
 .home {
-
   .intro {
-
     h2 {
       padding: 15px;
     }
 
     p {
-      padding:0 15px;
-      @media @phone {
-        padding: 0 10px;
-      }
+      padding: 0 15px;
     }
     img {
       width: 100%;
       border-radius: 5px;
     }
-  
   }
 
   .space-images {
@@ -26,7 +20,8 @@
     flex-wrap: wrap;
     width: 100%;
     @media @phone {
-      .sky, .launch {
+      .sky,
+      .launch {
         display: none;
       }
     }
@@ -67,18 +62,16 @@
     display: flex;
     justify-content: center;
     @media @phone {
-       margin-top: 4%;
-       flex-direction: column-reverse;
-       padding: 4%;
-      }
+      margin-top: 4%;
+      flex-direction: column-reverse;
+      padding: 4%;
+    }
 
     .walk-text {
       width: 50%;
       @media @phone {
         width: 100%;
-        display: flex;
-        flex-direction: column;
-
+        .flex-col;
       }
 
       h3 {
@@ -92,9 +85,8 @@
       .btn {
         .custom-btn(100px, 37px, @ebony-clay, @porcelain, 1.8rem);
         cursor: pointer;
-        display: flex;
+        .center;
         justify-content: center;
-        align-items: center;
         @media @phone {
           width: 100%;
           height: 7rem;
@@ -110,7 +102,7 @@
         margin-left: 0;
         margin-bottom: 7%;
       }
-      
+
       img {
         width: 100%;
         height: auto;
@@ -118,4 +110,4 @@
       }
     }
   }
-}// home
+} // home
