--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,13 +1,24 @@
 // Mixins Here
-.custom-btn(@width, @height, @bgcolor, @font-color, @font-size) {
-    width: @width;
-    height: @height;
-    background-color: @bgcolor;
-    color: @font-color;
-    font-size: @font-size;
-    border-radius: 5px;
+.center() {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-    &:hover {
+.flex-col() {
+  display: flex;
+  flex-direction: column;
+}
+
+.custom-btn(@width, @height, @bgcolor, @font-color, @font-size) {
+  width: @width;
+  height: @height;
+  background-color: @bgcolor;
+  color: @font-color;
+  font-size: @font-size;
+  border-radius: 5px;
+
+  &:hover {
     background-color: @font-color;
     color: @bgcolor;
   }
