tweeked nav to be correct at any viewport between desktop and mobile

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -17,18 +17,19 @@
       }
     }
     nav {
-      width: 47%;
+      width: 51%;
+      display: flex;
+      justify-content: space-around;
       margin: 2.3% 0 1.5% 0;
       font-size: 1.6rem;
       @media @phone {
-        width: 80.2%;
+        width: 87.2%;
         margin-top: 4%;
         margin-bottom: 3.5%;
       }
       a {
         text-decoration: none;
         color: @river-bend;
-        margin-right: 7.47%;
       }
       a:last-of-type {
         margin-right: 0;
