--- a/css/index.css
+++ b/css/index.css
@@ -186,13 +186,15 @@ p {
   }
 }
 .navigation .header nav {
-  width: 47%;
+  width: 51%;
+  display: flex;
+  justify-content: space-around;
   margin: 2.3% 0 1.5% 0;
   font-size: 1.6rem;
 }
 @media (max-width: 500px) {
   .navigation .header nav {
-    width: 80.2%;
+    width: 87.2%;
     margin-top: 4%;
     margin-bottom: 3.5%;
   }
@@ -200,7 +202,6 @@ p {
 .navigation .header nav a {
   text-decoration: none;
   color: #454A59;
-  margin-right: 7.47%;
 }
 .navigation .header nav a:last-of-type {
   margin-right: 0;
