--- a/less/navigation.less
+++ b/less/navigation.less
@@ -34,6 +34,15 @@
       a:last-of-type {
         margin-right: 0;
       }
+      /* Animations */
+      a:hover {
+        background-color: #454a59;
+        color: white;
+        padding: 3px;
+        transition: 0.8s;
+        border-radius: 3px;
+        font-size: 1.8rem;
+      }
     }
   }
 }
