--- a/css/index.css
+++ b/css/index.css
@@ -179,6 +179,21 @@ p {
 .navigation .header h1 {
   margin-top: 1.6%;
   font-size: 4rem;
+  animation-duration: 3s;
+  animation-name: bounce;
+}
+@keyframes bounce {
+  0% {
+    transform: scale(0.2);
+    opacity: 0;
+  }
+  50% {
+    tansform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    tansform: scale(1);
+  }
 }
 @media (max-width: 500px) {
   .navigation .header h1 {
