--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,6 +12,21 @@
     h1 {
       margin-top: 1.6%;
       font-size: 4rem;
+      animation-duration: 3s;
+      @keyframes bounce {
+        0% {
+          transform: scale(0.2);
+          opacity: 0;
+        }
+        50% {
+          tansform: scale(1.2);
+          opacity: 1;
+        }
+        100% {
+          tansform: scale(1);
+        }
+      }
+      animation-name: bounce;
       @media @phone {
         margin-top: 2.6%;
       }
