added animation to all h1, h2, h3, h4

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,13 @@
 // Home Content
 
 .home {
+  h1,
+  h2,
+  h3,
+  h4 {
+    animation-name: bounce;
+    animation-duration: 1.5s;
+  }
   .intro {
     h2 {
       padding: 15px;
