--- a/css/index.css
+++ b/css/index.css
@@ -135,7 +135,7 @@ html {
 html,
 body {
   font-family: 'Ubuntu', sans-serif;
-  color: #5E6164;
+  color: #5e6164;
 }
 h1,
 h2,
@@ -143,7 +143,7 @@ h3,
 h4,
 h5 {
   font-family: 'Russo One', sans-serif;
-  color: #23293B;
+  color: #23293b;
 }
 h2 {
   font-size: 3.2rem;
@@ -161,7 +161,7 @@ p {
   margin: 0 auto;
 }
 .navigation {
-  background: #F6F6F6;
+  background: #f6f6f6;
   margin-top: 0;
 }
 .navigation .header {
@@ -179,7 +179,7 @@ p {
 .navigation .header h1 {
   margin-top: 1.6%;
   font-size: 4rem;
-  animation-duration: 3s;
+  animation-duration: 1.5s;
   animation-name: bounce;
 }
 @keyframes bounce {
@@ -188,11 +188,11 @@ p {
     opacity: 0;
   }
   50% {
-    tansform: scale(1.2);
+    transform: scale(1.2);
     opacity: 1;
   }
   100% {
-    tansform: scale(1);
+    transform: scale(1);
   }
 }
 @media (max-width: 500px) {
@@ -217,7 +217,7 @@ p {
 }
 .navigation .header nav a {
   text-decoration: none;
-  color: #454A59;
+  color: #454a59;
 }
 .navigation .header nav a:last-of-type {
   margin-right: 0;
@@ -239,6 +239,13 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home h1,
+.home h2,
+.home h3,
+.home h4 {
+  animation-name: bounce;
+  animation-duration: 1.5s;
 }
 .home .intro h2 {
   padding: 15px;
@@ -321,8 +328,8 @@ footer {
 .home .walk .walk-text .btn {
   width: 100px;
   height: 37px;
-  background-color: #23293B;
-  color: #F6F7F8;
+  background-color: #23293b;
+  color: #f6f7f8;
   font-size: 1.8rem;
   border-radius: 5px;
   cursor: pointer;
@@ -332,8 +339,8 @@ footer {
   justify-content: center;
 }
 .home .walk .walk-text .btn:hover {
-  background-color: #F6F7F8;
-  color: #23293B;
+  background-color: #f6f7f8;
+  color: #23293b;
 }
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
